// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collage store > Anordnen > duplicateImageToPosition erzeugt eine Instanz mit Standard-Effekten 1`] = `
{
  "borderColor": "#000000",
  "borderEnabled": false,
  "borderRadius": 0,
  "borderShadowBlur": 6,
  "borderShadowColor": "#000000",
  "borderShadowEnabled": false,
  "borderShadowOffsetX": 3,
  "borderShadowOffsetY": 3,
  "borderStyle": "solid",
  "borderWidth": 4,
  "brightness": 100,
  "contrast": 100,
  "file": File {},
  "flipHorizontal": false,
  "flipVertical": false,
  "height": 100,
  "highlights": 0,
  "id": "id-1",
  "isGalleryTemplate": false,
  "opacity": 1,
  "rotation": 0,
  "saturation": 100,
  "shadowBlur": 10,
  "shadowColor": "#000000",
  "shadowEnabled": false,
  "shadowOffsetX": 5,
  "shadowOffsetY": 5,
  "shadows": 0,
  "sharpness": 0,
  "skewX": 0,
  "skewY": 0,
  "sourceId": "g",
  "url": "blob:a",
  "warmth": 0,
  "width": 100,
  "x": 300,
  "y": 400,
  "zIndex": 4,
}
`;

exports[`collage store > Benachrichtigungen > Aktionen zeigen ihre Toasts 1`] = `
[
  "2 Bild(er) dupliziert",
  "Text hinzugefügt",
]
`;

exports[`collage store > Bilder > addImages legt je Datei Galerie-Vorlage und Canvas-Instanz an 1`] = `
[
  {
    "borderColor": "#000000",
    "borderEnabled": false,
    "borderRadius": 0,
    "borderShadowBlur": 6,
    "borderShadowColor": "#000000",
    "borderShadowEnabled": false,
    "borderShadowOffsetX": 3,
    "borderShadowOffsetY": 3,
    "borderStyle": "solid",
    "borderWidth": 4,
    "brightness": 100,
    "contrast": 100,
    "file": File {},
    "flipHorizontal": false,
    "flipVertical": false,
    "height": 200,
    "highlights": 0,
    "id": "id-1",
    "isGalleryTemplate": true,
    "opacity": 1,
    "rotation": 0,
    "saturation": 100,
    "shadowBlur": 10,
    "shadowColor": "#000000",
    "shadowEnabled": false,
    "shadowOffsetX": 5,
    "shadowOffsetY": 5,
    "shadows": 0,
    "sharpness": 0,
    "skewX": 0,
    "skewY": 0,
    "url": "blob:a.jpg",
    "warmth": 0,
    "width": 200,
    "x": 50,
    "y": 50,
    "zIndex": 0,
  },
  {
    "borderColor": "#000000",
    "borderEnabled": false,
    "borderRadius": 0,
    "borderShadowBlur": 6,
    "borderShadowColor": "#000000",
    "borderShadowEnabled": false,
    "borderShadowOffsetX": 3,
    "borderShadowOffsetY": 3,
    "borderStyle": "solid",
    "borderWidth": 4,
    "brightness": 100,
    "contrast": 100,
    "file": File {},
    "flipHorizontal": false,
    "flipVertical": false,
    "height": 200,
    "highlights": 0,
    "id": "id-2",
    "isGalleryTemplate": false,
    "opacity": 1,
    "rotation": 0,
    "saturation": 100,
    "shadowBlur": 10,
    "shadowColor": "#000000",
    "shadowEnabled": false,
    "shadowOffsetX": 5,
    "shadowOffsetY": 5,
    "shadows": 0,
    "sharpness": 0,
    "skewX": 0,
    "skewY": 0,
    "sourceId": "id-1",
    "url": "blob:a.jpg",
    "warmth": 0,
    "width": 200,
    "x": 50,
    "y": 50,
    "zIndex": 1,
  },
]
`;

exports[`collage store > Bilder > addImages wendet das aktive Layout an 1`] = `
[
  [
    5,
    11.666666666666657,
    223.33333333333334,
    223.33333333333334,
  ],
  [
    238.33333333333334,
    11.666666666666657,
    223.33333333333334,
    223.33333333333334,
  ],
]
`;

exports[`collage store > Galerie > addSelectedGalleryToCanvas erzeugt versetzte Instanzen und wählt sie aus 1`] = `
[
  {
    "borderColor": "#000000",
    "borderEnabled": false,
    "borderRadius": 0,
    "borderShadowBlur": 6,
    "borderShadowColor": "#000000",
    "borderShadowEnabled": false,
    "borderShadowOffsetX": 3,
    "borderShadowOffsetY": 3,
    "borderStyle": "solid",
    "borderWidth": 4,
    "brightness": 100,
    "contrast": 100,
    "file": File {},
    "flipHorizontal": false,
    "flipVertical": false,
    "height": 80,
    "highlights": 0,
    "id": "id-1",
    "isGalleryTemplate": false,
    "opacity": 1,
    "rotation": 0,
    "saturation": 100,
    "shadowBlur": 10,
    "shadowColor": "#000000",
    "shadowEnabled": false,
    "shadowOffsetX": 5,
    "shadowOffsetY": 5,
    "shadows": 0,
    "sharpness": 0,
    "skewX": 0,
    "skewY": 0,
    "sourceId": "g1",
    "url": "blob:1",
    "warmth": 0,
    "width": 120,
    "x": 50,
    "y": 50,
    "zIndex": 5,
  },
  {
    "borderColor": "#000000",
    "borderEnabled": false,
    "borderRadius": 0,
    "borderShadowBlur": 6,
    "borderShadowColor": "#000000",
    "borderShadowEnabled": false,
    "borderShadowOffsetX": 3,
    "borderShadowOffsetY": 3,
    "borderStyle": "solid",
    "borderWidth": 4,
    "brightness": 100,
    "contrast": 100,
    "file": File {},
    "flipHorizontal": false,
    "flipVertical": false,
    "height": 100,
    "highlights": 0,
    "id": "id-2",
    "isGalleryTemplate": false,
    "opacity": 1,
    "rotation": 0,
    "saturation": 100,
    "shadowBlur": 10,
    "shadowColor": "#000000",
    "shadowEnabled": false,
    "shadowOffsetX": 5,
    "shadowOffsetY": 5,
    "shadows": 0,
    "sharpness": 0,
    "skewX": 0,
    "skewY": 0,
    "sourceId": "g2",
    "url": "blob:2",
    "warmth": 0,
    "width": 100,
    "x": 70,
    "y": 70,
    "zIndex": 7,
  },
]
`;

exports[`collage store > Text > addText legt Text mit Standardwerten über allen Ebenen an 1`] = `
{
  "color": "#000000",
  "fontFamily": "Arial",
  "fontSize": 48,
  "fontStyle": "normal",
  "fontWeight": 400,
  "id": "id-1",
  "letterSpacing": 0,
  "rotation": 0,
  "shadowBlur": 4,
  "shadowColor": "#000000",
  "shadowEnabled": false,
  "shadowOffsetX": 2,
  "shadowOffsetY": 2,
  "strokeColor": "#ffffff",
  "strokeEnabled": false,
  "strokeWidth": 2,
  "text": "Hallo",
  "textAlign": "center",
  "x": 250,
  "y": 370,
  "zIndex": 8,
}
`;

exports[`collage store > Vorlagen > saveAsTemplate bettet Bilder als Data-URL ein 1`] = `
{
  "category": "user",
  "collageState": {
    "images": [
      {
        "borderColor": "#000",
        "borderEnabled": false,
        "borderRadius": 0,
        "borderShadowBlur": 0,
        "borderShadowColor": "#000",
        "borderShadowEnabled": false,
        "borderShadowOffsetX": 0,
        "borderShadowOffsetY": 0,
        "borderStyle": "solid",
        "borderWidth": 1,
        "brightness": 100,
        "contrast": 100,
        "dataUrl": "data:blob:1",
        "flipHorizontal": false,
        "flipVertical": false,
        "height": 100,
        "highlights": 0,
        "id": "g",
        "isGalleryTemplate": true,
        "opacity": 1,
        "rotation": 0,
        "saturation": 100,
        "shadowBlur": 0,
        "shadowColor": "#000",
        "shadowEnabled": false,
        "shadowOffsetX": 0,
        "shadowOffsetY": 0,
        "shadows": 0,
        "sharpness": 0,
        "skewX": 0,
        "skewY": 0,
        "warmth": 0,
        "width": 100,
        "x": 0,
        "y": 0,
        "zIndex": 0,
      },
      {
        "borderColor": "#000",
        "borderEnabled": false,
        "borderRadius": 0,
        "borderShadowBlur": 0,
        "borderShadowColor": "#000",
        "borderShadowEnabled": false,
        "borderShadowOffsetX": 0,
        "borderShadowOffsetY": 0,
        "borderStyle": "solid",
        "borderWidth": 1,
        "brightness": 100,
        "contrast": 100,
        "dataUrl": "data:blob:1",
        "flipHorizontal": false,
        "flipVertical": false,
        "height": 100,
        "highlights": 0,
        "id": "c",
        "opacity": 1,
        "rotation": 0,
        "saturation": 100,
        "shadowBlur": 0,
        "shadowColor": "#000",
        "shadowEnabled": false,
        "shadowOffsetX": 0,
        "shadowOffsetY": 0,
        "shadows": 0,
        "sharpness": 0,
        "skewX": 0,
        "skewY": 0,
        "sourceId": "g",
        "warmth": 0,
        "width": 100,
        "x": 0,
        "y": 0,
        "zIndex": 0,
      },
    ],
    "layout": "grid-3x3",
    "settings": {
      "backgroundColor": "#ffffff",
      "backgroundImage": {
        "blur": 0,
        "brightness": 100,
        "contrast": 100,
        "fit": "cover",
        "opacity": 1,
        "saturation": 100,
        "url": null,
      },
      "border": {
        "color": "#000000",
        "enabled": false,
        "style": "solid",
        "width": 12,
      },
      "cornerRadius": 0,
      "gridEnabled": false,
      "gridSize": 50,
      "height": 740,
      "layout": "grid-3x3",
      "width": 700,
    },
    "texts": [
      {
        "color": "#000000",
        "fontFamily": "Arial",
        "fontSize": 48,
        "fontStyle": "normal",
        "fontWeight": 400,
        "id": "id-1",
        "letterSpacing": 0,
        "rotation": 0,
        "shadowBlur": 4,
        "shadowColor": "#000000",
        "shadowEnabled": false,
        "shadowOffsetX": 2,
        "shadowOffsetY": 2,
        "strokeColor": "#ffffff",
        "strokeEnabled": false,
        "strokeWidth": 2,
        "text": "Hallo",
        "textAlign": "center",
        "x": 250,
        "y": 370,
        "zIndex": 1,
      },
    ],
  },
  "createdAt": 1000,
  "description": "Beschreibung",
  "id": "template-user-1000",
  "name": "Name",
  "thumbnail": "",
}
`;
